--- a/extra_notes/rootfinding_notes.tex
+++ b/extra_notes/rootfinding_notes.tex
@@ -11,7 +11,7 @@
 \usepackage[margin=0.75in]{geometry}
 
 %opening
-\title{Construction of coefficients for polynomial root-finding problems in PathFinder algorithm}
+\title{Construction of coefficients for polynomial root-finding problems in PathFinder}
 \author{Andrew Gibbs}
 
 
@@ -36,11 +36,11 @@
 		In the original paper about the PathFinder algorithm \cite{PFpaper}, the derivation of some root-finding procedures were deemed too trivial to include. Unfortunately, these derivations are not trivial enough to explain within the comments of the code, so full details are given here, for anyone who wants interested in fully understanding the algorithm/code.
 	\end{abstract}
 
-Following the notation of the paper \cite{PFpaper}, we write the polynomial phase function as
+Following the notation \cite{PFpaper}, we write the polynomial phase function as
 \[
 g(z) = \sum_{j=0}^J \alpha_j z^j.
 \]
-We use $\xi$ to denote the centre of a ball, which can (usually) be assumed to be stationary points.
+We use $\xi$ to denote the centre of a complex ball, which is usually a stationary point.
 
 \section{Finding the intersection of rays with the boundary of the non-oscillatory region}
 
@@ -66,7 +66,7 @@ First, we find the coefficients of the polynomial inside the absolute value sign
 	\end{array}\right)
 	\xi^{j-k}\right]\label{eq:polysplit},
 \end{align}
-where the coefficients are given explicitly in square brackets, after reordering in the final line.
+where the coefficients are given explicitly in square brackets, after reordering the sums in the final line.
 
 Now we can write
 \[
@@ -84,8 +84,9 @@ a_k := \re^{\ri k \theta}\sum_{j=k}^J \alpha_j\left(\begin{array}{c}
 
 Using our knowledge of the coefficients, the function \eqref{eq:G} can now be expressed as
 \begin{align*}
-G(r)&=\left(\sum_{k=0}^J a_kr^k\right)\left(\sum_{k=0}^J \overline{a_k}r^k\right) -\left(\frac{\Cball}{\omega}\right)^2\\
-&=\sum_{\ell=0}^{2J} b_jr^k
+G(r)&=\left(g(\xi+r\re^{\ri \theta})-g(\xi)\right)\overline{\left(g(\xi+r\re^{\ri \theta})-g(\xi)\right)}-\left(\frac{\Cball}{\omega}\right)^2\\
+&=\left(\sum_{k=0}^J a_kr^k\right)\left(\sum_{k=0}^J \overline{a_k}r^k\right) -\left(\frac{\Cball}{\omega}\right)^2\\
+&=\sum_{\ell=0}^{2J} b_jr^k,
 \end{align*}
 where
 \[
@@ -97,7 +98,7 @@ In the PathFinder subroutine \texttt{getRGivenTheta} we use Matlab's \texttt{roo
 
 \section{Finding the exits on the circumference of the ball}
 
-In \S2.3 of the PathFinder paper \cite{PFpaper}, it is mentioned that the exits are determined using a trigonometric root-finding procedure. Now, the radius of the ball $r$ is fixed, and we are looking for local maxima (in $\theta$) of $\Im g(\xi+r\re^{\ri \theta})$, which can be done using elementary derivative testing.
+In \S2.3 of the PathFinder paper \cite{PFpaper}, it is mentioned that the exits are determined using a trigonometric root-finding procedure. Now, the radius of the ball $r$ is fixed, and we are looking for local maxima (in $\theta$) of $\Im g(\xi+r\re^{\ri \theta})$, which can be done using elementary derivative testing. The approach here is to represent $\Im g(\xi+r\re^{\ri \theta})$ exactly in terms of a finite Fourier basis.
 
 First, we must construct the trigonometric polynomial in $\theta$. From \eqref{eq:polysplit} we can write
 \begin{align*}
@@ -109,22 +110,22 @@ First, we must construct the trigonometric polynomial in $\theta$. From \eqref{e
 \end{align*}
 Now we can find coefficients for the derivatives in terms of this Fourier basis, as follows:
 \begin{align}
-\Im\left[g(\xi+r\re^{\ri \theta})\right] &= \sum_{k=0}^J \Im [c_k]\cos(k\theta) + \Re[c_k]\sin(k\theta) \nonumber\\
-\frac{\partial}{\partial\theta}\Im\left[g(\xi+r\re^{\ri \theta})\right] &= \sum_{k=0}^J -k\Im [c_k]\sin(k\theta) + k\Re[c_k]\cos(k\theta) &= \sum_{k=0}^Ja_k\cos(k\theta)+b_k\sin(k\theta)\label{eq:imd}\\
-\frac{\partial^2}{\partial\theta^2}\Im\left[g(\xi+r\re^{\ri \theta})\right] &= \sum_{k=0}^J -k^2\Im [c_k]\cos(k\theta) - k^2\Re[c_k]\sin(k\theta) &= \sum_{k=0}^Ja'_k\cos(k\theta)+b'_k\sin(k\theta)\label{eq:imdd}
+\Im\left[g(\xi+r\re^{\ri \theta})\right] &= \sum_{k=0}^J \Im [c_k]\cos(k\theta) + \Re[c_k]\sin(k\theta), \nonumber\\
+\frac{\partial}{\partial\theta}\Im\left[g(\xi+r\re^{\ri \theta})\right] &= \sum_{k=0}^J -k\Im [c_k]\sin(k\theta) + k\Re[c_k]\cos(k\theta) &= \sum_{k=0}^Ja_k\cos(k\theta)+b_k\sin(k\theta),\label{eq:imd}\\
+\frac{\partial^2}{\partial\theta^2}\Im\left[g(\xi+r\re^{\ri \theta})\right] &= \sum_{k=0}^J -k^2\Im [c_k]\cos(k\theta) - k^2\Re[c_k]\sin(k\theta) &= \sum_{k=0}^Ja'_k\cos(k\theta)+b'_k\sin(k\theta).\label{eq:imdd}
 \end{align}
 
-Note that the coefficients $a_k$ and $b_k$ are different to the previous section, we have abused notation to be consistent with local variable names within the code. Now the roots of \eqref{eq:imd} can be found using \cite{boyd}, and the maxima can be filtered out using the second derivative test on \eqref{eq:imdd}.
+Note that the coefficients $a_k$ and $b_k$ have a different meaning here to the previous section - we have abused notation to be consistent with local variable names within the code. Now the roots of \eqref{eq:imd} can be found using \cite{boyd}, and the maxima can be filtered out using the second derivative test on \eqref{eq:imdd}.
 
 In PathFinder, this is done in the subroutine \texttt{getSteepestExitsOnBall}. The coefficients $a_k$, $b_k$, $a'_k$ and $b'_k$ are represented by the vectors \texttt{a}, \texttt{b}, \texttt{da} and \texttt{db} respectively.
 
 \begin{thebibliography}{9}
 	
 	\bibitem{PFpaper}
-	A. Gibbs, D. P. Hewett, D. Huybrechs (2024) \emph{Numerical evaluation of oscillatory integrals via automated steepest descent path deformation}, To appear J. Comput. Phys.
+	A. Gibbs, D. P. Hewett, D. Huybrechs, \emph{Numerical evaluation of oscillatory integrals via automated steepest descent path deformation}, to appear J. Comput. Phys. (2024).
 	
 	\bibitem{boyd}
-	J. P. Boyd (1986) \emph{Computing the zeros, maxima and inflection points of Chebyshev, Legendre and Fourier series: solving transcendental equations by spectral interpolation and polynomial rootfinding}, J. Eng. Math., 56 (2006), pp. 203–219.
+	J. P. Boyd, \emph{Computing the zeros, maxima and inflection points of Chebyshev, Legendre and Fourier series: solving transcendental equations by spectral interpolation and polynomial rootfinding}, J. Eng. Math., 56 (2006), pp. 203–219.
 	
 	
 \end{thebibliography}
