recompiling joss paper

--- a/documents/joss_refs.bib
+++ b/documents/joss_refs.bib
@@ -30,17 +30,18 @@ abstract = {Steepest descent methods combining complex contour deformation with 
 
 @Misc{DLMF,
 title = "{NIST Digital Library of Mathematical Functions}",
-note="http://dlmf.nist.gov/, release 1.1.3 of 2021-09-15"}
+note="http://dlmf.nist.gov/, release 1.1.12 of 2023-12-15",
+year = {2023}}
 
 @book{DeHuIs:18,
 	title={{Computing Highly Oscillatory Integrals}},
-	author={Dea{\~n}o, Alfredo and Huybrechs, Daan and Iserles, Arieh},
+	author={A. Dea{\~n}o and D. Huybrechs and A. Iserles},
 	year={2018},
 	publisher={SIAM}
 }
 
 @article {HuVa:06,
-    AUTHOR = {Huybrechs, Daan and Vandewalle, Stefan},
+    AUTHOR = {Daan Huybrechs and Stefan Vandewalle},
      TITLE = {On the evaluation of highly oscillatory integrals by analytic
               continuation},
    JOURNAL = {SIAM J. Numer. Anal.},
