appear to have addressed referencing issue in joss paper

--- a/documents/joss_refs.bib
+++ b/documents/joss_refs.bib
@@ -41,7 +41,7 @@ year = {2023}}
 }
 
 @article {HuVa:06,
-    AUTHOR = {Daan Huybrechs and Stefan Vandewalle},
+    AUTHOR = {D. Huybrechs and S. Vandewalle},
      TITLE = {On the evaluation of highly oscillatory integrals by analytic
               continuation},
    JOURNAL = {SIAM J. Numer. Anal.},
