made small changes to JOSS paper

--- a/documents/joss_paper/joss_refs.bib
+++ b/documents/joss_paper/joss_refs.bib
@@ -28,7 +28,7 @@ keywords = {Oscillatory quadrature, numerical steepest descent method, saddle po
 abstract = {Steepest descent methods combining complex contour deformation with numerical quadrature provide an efficient and accurate approach for the evaluation of highly oscillatory integrals. However, unless the phase function governing the oscillation is particularly simple, their application requires a significant amount of a priori analysis and expert user input, to determine the appropriate contour deformation, and to deal with the non-uniformity in the accuracy of standard quadrature techniques associated with the coalescence of stationary points (saddle points) with each other, or with the endpoints of the original integration contour. In this paper we present a novel algorithm for the numerical evaluation of oscillatory integrals with general polynomial phase functions, which automates the contour deformation process and avoids the difficulties typically encountered with coalescing stationary points and endpoints. The inputs to the algorithm are simply the phase and amplitude functions, the endpoints and orientation of the original integration contour, and a small number of numerical parameters. By a series of numerical experiments we demonstrate that the algorithm is accurate and efficient over a large range of frequencies, even for examples with a large number of coalescing stationary points and with endpoints at infinity. As a particular application, we use our algorithm to evaluate cuspoid canonical integrals from scattering theory. A Matlab implementation of the algorithm is made available and is called PathFinder.}
 }
 
-@Misc{DLMF,
+@website{DLMF,
 title = "{NIST Digital Library of Mathematical Functions}",
 note="http://dlmf.nist.gov/, release 1.1.12 of 2023-12-15",
 year = {2023}}
