--- a/documents/joss_paper/joss_refs.bib
+++ b/documents/joss_paper/joss_refs.bib
@@ -31,7 +31,23 @@ abstract = {Steepest descent methods combining complex contour deformation with 
 @website{DLMF,
 title = "{NIST Digital Library of Mathematical Functions}",
 note="http://dlmf.nist.gov/, release 1.1.12 of 2023-12-15",
+url="http://dlmf.nist.gov",
 year = {2023}}
+
+@website{NIntegrate,
+title = {Mathematica NIntegrate Integration Rules - LevinRule},
+author = "Wolfram",
+url = "https://reference.wolfram.com/language/tutorial/NIntegrateIntegrationRules.html#32844337",
+year = {2024}
+}
+
+@website{DAryo,
+  title = {Dijkstra Algorithm},
+  author = "Dimas Aryo",
+  note = "MATLAB Central File Exchange. Retrieved January 12, 2024.",
+  year = {2024},
+  url = "https://www.mathworks.com/matlabcentral/fileexchange/36140-dijkstra-algorithm"
+}
 
 @book{DeHuIs:18,
 	title={{Computing Highly Oscillatory Integrals}},
