Made first updates to paper, and small changes to argument details

--- a/documents/joss_paper/joss_refs.bib
+++ b/documents/joss_paper/joss_refs.bib
@@ -82,6 +82,7 @@ MRREVIEWER = {Kai Diethelm},
 volume = {11},
   year={1979},
   pages={791--797},
+  doi={10.1007/BF01455058}
 }
 
 @article{HuJuLe:19,
@@ -155,4 +156,21 @@ issn = "0010-4655",
 doi = "10.1016/S0010-4655(00)00126-0",
 url = "http://www.sciencedirect.com/science/article/pii/S0010465500001260",
 author = "N.P. Kirk and J.N.L. Connor and C.A. Hobbs"
+}
+
+@article{dijkstra2022note,
+  title={A note on two problems in connexion with graphs},
+  author={Dijkstra, Edsger W},
+  pages={269--271},
+  year={1959},
+  doi={10.1007/BF01386390},
+  volume={1},
+  issn={1}
+} 
+
+@book{gautschi2004orthogonal,
+  title={Orthogonal polynomials: computation and approximation},
+  author={Gautschi, Walter},
+  year={2004},
+  publisher={OUP Oxford}
 }
