--- a/documents/joss_paper/joss_refs.bib
+++ b/documents/joss_paper/joss_refs.bib
@@ -174,3 +174,17 @@ author = "N.P. Kirk and J.N.L. Connor and C.A. Hobbs"
   year={2004},
   publisher={OUP Oxford}
 }
+
+@article{FePeTu:23,
+title = {Oscillatory path integrals for radio astronomy},
+journal = {Annals of Physics},
+volume = {451},
+pages = {169255},
+year = {2023},
+issn = {0003-4916},
+doi = {https://doi.org/10.1016/j.aop.2023.169255},
+url = {https://www.sciencedirect.com/science/article/pii/S0003491623000404},
+author = {Job Feldbrugge and Ue-Li Pen and Neil Turok},
+keywords = {Interference, Lensing, Wave optics, Kirchhoff–Fresnel integral},
+abstract = {We introduce a new method for evaluating the oscillatory integrals which describe natural interference patterns. As an illustrative example of contemporary interest, we consider astrophysical plasma lensing of coherent sources like pulsars and fast radio bursts in radio astronomy. Plasma lenses are known to occur near the source, in the interstellar medium, as well as in the solar wind and the earth’s ionosphere. Such lensing is strongest at long wavelengths, hence it is generally important to go beyond geometric optics and into the full wave optics regime. Our computational method is a spinoff of new techniques two of us, and our collaborators, have developed for defining and performing Lorentzian path integrals with applications in quantum mechanics, condensed matter physics, and quantum gravity. Cauchy’s theorem allows one to transform a computationally fragile and expensive, highly oscillatory integral into an exactly equivalent sum of absolutely and rapidly convergent integrals which can be evaluated in polynomial time. We require only that it is possible to analytically continue the lensing phase, expressed in the integrated coordinates, into the complex domain. We give a first-principles derivation of the Fresnel–Kirchhoff integral, starting from Feynman’s path integral for a massless particle in a refractive medium. We then demonstrate the effectiveness of our method by computing the detailed diffraction patterns of Thom’s caustic catastrophes, both in their “normal forms” and within a variety of more realistic, local lens models, for all wavelengths. Our numerical method, implemented in a freely downloadable code, provides a fast, accurate tool for modeling interference patterns in radioastronomy and other fields of physics.}
+}
