Absorbed README into guide

--- a/docs/guide/references.bib
+++ b/docs/guide/references.bib
@@ -1,10 +1,36 @@
-@article{perez2011python
-,	title	= {Python: an ecosystem for scientific computing}
-,	author	= {Perez, Fernando and Granger, Brian E and Hunter, John D}
-,	journal	= {Computing in Science \\& Engineering}
-,	volume	= {13}
-,	number	= {2}
-,	pages	= {13--21}
-,	year	= {2011}
-,	publisher	= {AIP Publishing}
+@article {PFpaper,
+    AUTHOR = {Gibbs, A. and Hewett, D. P. and Huybrechs, D.},
+     TITLE = {Numerical evaluation of oscillatory integrals via automated
+              steepest descent contour deformation},
+   JOURNAL = {J. Comput. Phys.},
+  FJOURNAL = {Journal of Computational Physics},
+    VOLUME = {501},
+      YEAR = {2024},
+     PAGES = {Paper No. 112787, 23},
+      ISSN = {0021-9991,1090-2716},
+   MRCLASS = {65D32 (65E05)},
+  MRNUMBER = {4697975},
+MRREVIEWER = {Jing\ Gao},
+       DOI = {10.1016/j.jcp.2024.112787},
+       URL = {https://doi.org/10.1016/j.jcp.2024.112787},
+}
+
+@article {Bo:06,
+    AUTHOR = {Boyd, John P.},
+     TITLE = {Computing the zeros, maxima and inflection points of
+              {C}hebyshev, {L}egendre and {F}ourier series: solving
+              transcendental equations by spectral interpolation and
+              polynomial rootfinding},
+   JOURNAL = {J. Engrg. Math.},
+  FJOURNAL = {Journal of Engineering Mathematics},
+    VOLUME = {56},
+      YEAR = {2006},
+    NUMBER = {3},
+     PAGES = {203--219},
+      ISSN = {0022-0833,1573-2703},
+   MRCLASS = {65H05 (33F05 41A10 42A10)},
+  MRNUMBER = {2292672},
+MRREVIEWER = {Boro\ D\"oring},
+       DOI = {10.1007/s10665-006-9087-5},
+       URL = {https://doi.org/10.1007/s10665-006-9087-5},
 }
