--- a/docs/guide/references.bib
+++ b/docs/guide/references.bib
@@ -34,3 +34,34 @@ MRREVIEWER = {Boro\ D\"oring},
        DOI = {10.1007/s10665-006-9087-5},
        URL = {https://doi.org/10.1007/s10665-006-9087-5},
 }
+
+@online{DLMF,
+title = "{NIST Digital Library of Mathematical Functions}",
+note="http://dlmf.nist.gov/, release 1.1.12 of 2023-12-15",
+url="http://dlmf.nist.gov",
+year = {2023}}
+
+@article {wm:24,
+    AUTHOR = {Ockendon, J. R. and Ockendon, H. and Tew, R. H. and Hewett, D.
+              P. and Gibbs, A.},
+     TITLE = {A caustic terminating at an inflection point},
+   JOURNAL = {Wave Motion},
+  FJOURNAL = {Wave Motion. An International Journal Reporting Research on
+              Wave Phenomena},
+    VOLUME = {125},
+      YEAR = {2024},
+     PAGES = {Paper No. 103257, 7},
+      ISSN = {0165-2125,1878-433X},
+   MRCLASS = {35L05 (65D30)},
+  MRNUMBER = {4678363},
+       DOI = {10.1016/j.wavemoti.2023.103257},
+       URL = {https://doi.org/10.1016/j.wavemoti.2023.103257},
+}
+
+@online{aryo,
+  title = {Dijkstra Algorithm},
+  author = "D. Aryo",
+  note = "MATLAB Central File Exchange. Retrieved January 12, 2024.",
+  year = {2024},
+  url = "https://www.mathworks.com/matlabcentral/fileexchange/36140-dijkstra-algorithm"
+}
