added further details to the theory in the docs

--- a/docs/guide/references.bib
+++ b/docs/guide/references.bib
@@ -65,3 +65,10 @@ year = {2023}}
   year = {2024},
   url = "https://www.mathworks.com/matlabcentral/fileexchange/36140-dijkstra-algorithm"
 }
+
+@book{DeHuIs:18,
+	title={{Computing Highly Oscillatory Integrals}},
+	author={A. Dea{\~n}o and D. Huybrechs and A. Iserles},
+	year={2018},
+	publisher={SIAM}
+}
