Added documentation for all quadrature files

--- a/docs/guide/references.bib
+++ b/docs/guide/references.bib
@@ -72,3 +72,10 @@ year = {2023}}
 	year={2018},
 	publisher={SIAM}
 }
+
+@book{gautschi2004orthogonal,
+  title={Orthogonal polynomials: computation and approximation},
+  author={Gautschi, Walter},
+  year={2004},
+  publisher={OUP Oxford}
+}
