added DOIs to JOSS paper

--- a/docs/joss_paper/joss_refs.bib
+++ b/docs/joss_paper/joss_refs.bib
@@ -53,7 +53,8 @@ year = {2024}
 	title={{Computing Highly Oscillatory Integrals}},
 	author={A. Dea{\~n}o and D. Huybrechs and A. Iserles},
 	year={2018},
-	publisher={SIAM}
+	publisher={SIAM},
+  doi={10.1137/1.9781611975123}
 }
 
 @article {HuVa:06,
@@ -116,6 +117,7 @@ volume = {11},
    MRCLASS = {65.0X},
   MRNUMBER = {20857},
 MRREVIEWER = {C. J. Bouwkamp},
+DOI = {10.1080/14786444608561335}
 }
 
 @article {Ar:81,
@@ -133,6 +135,7 @@ MRREVIEWER = {C. J. Bouwkamp},
    MRCLASS = {58C27 (58F05)},
   MRNUMBER = {639196},
 MRREVIEWER = {Alan Weinstein},
+DOI = {10.1007/BF01106152}
 }
 
 @article{HeOcSm:19,
@@ -172,7 +175,8 @@ author = "N.P. Kirk and J.N.L. Connor and C.A. Hobbs"
   title={Orthogonal polynomials: computation and approximation},
   author={Gautschi, Walter},
   year={2004},
-  publisher={OUP Oxford}
+  publisher={OUP Oxford},
+  doi={10.1093/oso/9780198506720.001.0001}
 }
 
 @article{FePeTu:23,
