olexandr-konovalov's suggested changes to paper

--- a/docs/joss_paper/joss_refs.bib
+++ b/docs/joss_paper/joss_refs.bib
@@ -186,7 +186,7 @@ volume = {451},
 pages = {169255},
 year = {2023},
 issn = {0003-4916},
-doi = {https://doi.org/10.1016/j.aop.2023.169255},
+doi = {doi.org/10.1016/j.aop.2023.169255},
 url = {https://www.sciencedirect.com/science/article/pii/S0003491623000404},
 author = {Job Feldbrugge and Ue-Li Pen and Neil Turok},
 keywords = {Interference, Lensing, Wave optics, Kirchhoff–Fresnel integral},
