minor change in joss_refs.bib

--- a/docs/joss_paper/joss_refs.bib
+++ b/docs/joss_paper/joss_refs.bib
@@ -50,7 +50,7 @@ year = {2024}
 }
 
 @book{DeHuIs:18,
-	title={{Computing Highly Oscillatory Integrals}},
+	title={Computing Highly Oscillatory Integrals},
 	author={A. Dea{\~n}o and D. Huybrechs and A. Iserles},
 	year={2018},
 	publisher={SIAM},
